test/tests/compiler/8_loops/valid/extra_credit/switch_no_case.plx






#  if a switch statement body contains no case statements,
#  nothing in it will be executed
pub fn main(none) i32 {
    a: i32 = 4
    match a {
        return 0
    }
    return a
}
