test/tests/compiler/8_loops/invalid_semantics/extra_credit/default_outside_switch.plx
pub fn main(none) i32 {
    {
        #  case statements can only appear inside switch statements
        otherwise {
            return 0
        }
    }
}
